--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#252425</color>
+    <color name="colorPrimaryDark">#D50000</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorBrown">#353333</color>
+    <color name="gray_button">#606060</color>
+    <color name="white">#ffffff</color>
+    <color name="green">#285E05</color>
 </resources>
