--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="gray_button">#606060</color>
     <color name="white">#ffffff</color>
     <color name="green">#285E05</color>
+    <color name="gray_text_color">#6F6F6E</color>
 </resources>
