--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -31,6 +31,44 @@
         app:layout_constraintRight_toRightOf="parent"
         android:visibility="gone"/>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/empty_state"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+        android:layout_margin="12dp"
+        app:cardCornerRadius="6dp"
+        app:cardBackgroundColor="#FCFCFC"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/search"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:id="@+id/empty_state_filter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:gravity="center"
+                android:text="@string/not_found_movies"
+                android:textSize="18sp"/>
+
+            <Button
+                android:id="@+id/search_online"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:textColor="@color/white"
+                android:background="#43A047"
+                android:text="Búsqueda online"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/progress"
         app:lottie_autoPlay="true"
@@ -44,5 +82,4 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
